--- a/.openapi-generator-template/python/exports_package.mustache
+++ b/.openapi-generator-template/python/exports_package.mustache
@@ -1,5 +1,4 @@
-# import our test class
-from {{packageName}}.esi_client import test_get_alliances
+# import eve-esi-python esi_client classes and methods
 
 # import apis into sdk package
 {{#apiInfo}}{{#apis}}from {{apiPackage}}.{{classFilename}} import {{classname}} as {{classname}}
